add integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,26 @@
 version: 2
+machine: true
 jobs:
   build:
+    machine:
+      image: ubuntu-2004:202010-01
     working_directory: ~/circleci-java
-    docker:
-      - image: circleci/openjdk:8-jdk-stretch
     steps:
+      - run:
+          # OpenJDK 8 is only needed for JavaAgentIT. Once we refactored that
+          # test to run with OpenJDK 11, we don't need OpenJDK 8 on the build image anymore.
+          name: Install OpenJDK 8
+          command: |
+            sudo apt-get update && sudo apt-get install -y openjdk-8-jdk
+            sudo update-java-alternatives --jre-headless --jre --set java-1.8.0-openjdk-amd64
+            java -version
       - checkout
-      - restore_cache: # restore the saved cache after the first run or if `pom.xml` has changed
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
-      - run: mvn dependency:go-offline # gets the project dependencies
+      - restore_cache:
+          key: maven-dependencies-{{ checksum "pom.xml" }}
+      - run: mvn clean verify
       - save_cache:
           paths:
             - ~/.m2
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
-      - run: mvn package
+          key: maven-dependencies-{{ checksum "pom.xml" }}
 orbs:
   prometheus: prometheus/prometheus@0.11.0
