--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>collector</module>
     <module>jmx_prometheus_httpserver</module>
     <module>jmx_prometheus_javaagent</module>
+    <module>integration_tests</module>
   </modules>
 
   <distributionManagement>
