--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -31,6 +31,16 @@
       <artifactId>snakeyaml</artifactId>
       <version>1.23</version> <!-- updating this breaks Java 6 compatibility -->
     </dependency>
+
+    <!-- 虚拟机类信息采集支持 -->
+    <dependency>
+      <groupId>io.earcam.wrapped</groupId>
+      <artifactId>com.sun.tools.attach</artifactId>
+      <version>1.8.0_jdk8u131-b11</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/tools.jar</systemPath>
+    </dependency>
+
   </dependencies>
 
 
