--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -35,16 +35,21 @@
     <!-- 虚拟机类信息采集支持 -->
 <!--    <dependency>-->
 <!--      <groupId>io.earcam.wrapped</groupId>-->
-<!--      <artifactId>com.sun.tools.attach</artifactId>-->
+<!--      <artifactId>com.sun.io.prometheus.jmx.tools.attach</artifactId>-->
 <!--      <version>1.8</version>-->
 <!--      <scope>system</scope>-->
-<!--      <systemPath>${project.basedir}/lib/tools-1.8.jar</systemPath>-->
+<!--      <systemPath>${project.basedir}/lib/io.prometheus.jmx.tools-1.8.jar</systemPath>-->
 <!--    </dependency>-->
     <dependency>
-      <groupId>com.kungeek.srep</groupId>
-      <artifactId>tools</artifactId>
-      <version>1.8</version>
+      <groupId>io.earcam.wrapped</groupId>
+      <artifactId>com.sun.tools.attach</artifactId>
+      <version>1.8.0_jdk8u172-b11</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.kungeek.srep</groupId>-->
+<!--      <artifactId>io.prometheus.jmx.tools</artifactId>-->
+<!--      <version>1.8</version>-->
+<!--    </dependency>-->
   </dependencies>
 
 
@@ -70,17 +75,6 @@
         </configuration>
       </plugin>
     </plugins>
-    <resources>
-      <resource>
-        <!--本地jar得目录-->
-        <directory>/lib</directory>
-        <!--打包时，目标jar存放位置-->
-        <targetPath>META-INF/lib/</targetPath>
-        <includes>
-          <include>**/*.jar</include>
-        </includes>
-      </resource>
-    </resources>
   </build>
 
   <properties>
